index.css
@import url(./fonts/BebasNeueCyrillic/bebas-font.css);
@import url(./fonts/Montserrat/monserrat-font.css);
@import url(./fonts/Poppins/poppins-font.css);

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: white;
  font-family: "Bebas";
  font-style: normal;
  font-weight: 400px;
}

p,
span,
h5 {
  font-family: "Poppins";
  font-style: normal;
  font-weight: 600;
}

h5 {
  font-size: 30px;
  line-height: 14px;
}

h1,
h2,
h3,
h4 {
  font-family: "Bebas";
  font-style: normal;
}

body {
  font: 400 Bebas, sans-serif;
  background: #151a20;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow-x: hidden;
}

.logo {
}

.wrapper {
  width: 100%;
  max-width: 81.25%;
  position: relative;
}

.nav {
  position: fixed;
  left: 0;
  top: 100px;
  display: flex;
  flex-direction: column;
  row-gap: 34px;
  background: #1e242c;
  padding: 60px 15px;
  box-shadow: 9px 4px 18px 10px rgba(0, 0, 0, 0.25);
  border-radius: 0px 50px 50px 0px;
}

.nav > * {
  cursor: pointer;
}

.header {
  width: 100%;
  height: 100%;
  background: url("./assets/header-bg.png") no-repeat bottom;
  background-size: cover;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 1000px;
  margin-bottom: 10px;
  row-gap: 140px;
}

.header-top {
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  max-height: 100px;
}

.header-top-logo {
}

.header-top-user {
  display: flex;
  flex-direction: row;
  align-items: center;
  column-gap: 25px;
}

.header-top-user-icon {
  max-height: 32px;
}

.header-top-user-info {
  display: flex;
  flex-direction: row;
  align-items: center;
  column-gap: 5px;
}

.header-top-user-info-img {
  filter: drop-shadow(0px 20px 60px rgba(0, 0, 0, 0.15));
}

.header-top-user-info-data{
  display: flex;
  flex-direction: column;
}


.header-top-user-info-data-h1{
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 14px;
}

.header-top-user-info-data-span{
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 14px;
}


.header-title {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-start;
  flex: 1;
}

.header-title-content {
  max-width: 40%;
}

.header-title-content-h2{
  display: flex;
  flex-direction: row;
  align-items: center;
}

.header-title-content-h2 >h2{
  font-weight: 400;
font-size: 48px;
line-height: 65px;
}

.header-title-content-h2-fire{
  min-height: 24px;
  min-width: 18px;
}

.header-title-content-h1{
  font-weight: 400;
  font-size: 64px;
  line-height: 65px;
}

.header-title-content-info-spec{
  display: flex;
  flex-direction: row;
  column-gap: 10px;
}

.header-title-content-span{
  font-family: 'Bebas';
  font-weight: 400;
  font-size: 36px;
  line-height: 65px;
  color: #FFC30D;
}

.header-title-content-p{
  font-family: 'Poppins';
font-style: normal;
font-weight: 300;
font-size: 16px;
line-height: 24px;
}


.header-title-content-score{
  display: flex;
  flex-direction: row;
  column-gap: 20px;
  line-height: 24px;
}

.header-title-content-btn {
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(270deg, #8743FF 0%, #4136F1 100%);
  box-shadow: 0px 15px 30px rgba(20, 102, 204, 0.16);
  backdrop-filter: blur(15px);
  border-radius: 13px;
  border: none;
  padding: 17px 32px 20px 26px;
  margin-top: 20px;

  font-family: 'Poppins';
font-style: normal;
font-weight: 600;
font-size: 14px;
line-height: 14px;
  cursor: pointer;
}

.header-title-gif{
  position: absolute;
  right: 0;
  height: 100%;
  width: 66%;
  background: url(assets/fire-anim.gif);
  mix-blend-mode: lighten;
  border: 1px solid #000000;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  background-repeat: no-repeat;
  background-position: 50% 0;
  background-size: cover;
}


.content {
  display: flex;
  flex-direction: column;
  row-gap: 30px;
}

.content-panel {
  display: flex;
  flex-direction: column;
  row-gap: 48px;
}


.card {
  position: relative;
}

.card-content {
  top: 0;
  height: 100%;
  position: absolute;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  row-gap: 10px;
  background: linear-gradient(180deg, rgba(21, 26, 32, 0) 0%, rgba(21, 26, 32, 0.99) 100%);
}

.card-content-data{
  padding-left: 20px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  row-gap: 10px;
}

.card-content-data-small{
  padding-left: 10px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  row-gap: 10px;
}

.card-content-hd {
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(270deg, #8743FF 0%, #4136F1 100%);
  border-radius: 0px 10px 10px 0px;
  padding: 8px 18px;
  width: fit-content;
}


.card-title{
  max-width: 82%;
  font-weight: 400;
  font-size: 25px;
  line-height: 25px;
}

.card-title-big {
  font-weight: 400;
  font-size: 48px;
  line-height: 48px;
  max-width: 85%;
}

.card-title-last{
  font-size: 48px;
  line-height: 48px;
  margin-left: 21px;
  margin-bottom: 3px;
  max-width: 82%;
}

.card-content-p {
  font-family: "Poppins";
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 21px;
}

.card-content-bottom {
  column-gap: 52px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap ;
}

.card-content-bottom-score {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  column-gap: 28px;
}

.card-content-bottom-score-big {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  column-gap: 20px;
}

.content-btn{
  font-family: "Bebas";
  font-style: normal;
  font-weight: 400;
  background: #ffc30d;
  border-radius: 10px 0px;
  border: 0;
  cursor: pointer;
}

.content-btn > span{
  margin-left: 15px;
} 

.card-content-btn {
  padding: 8px 20px;
  font-size: 14px;
  line-height: 14px;
}

.card-content-btn-large {
  font-size: 36px;
  line-height: 36px;
  padding: 17px 37px;
}

.card-content-btn-special{
  position: absolute;
  right: 0;
  bottom: 0;
  font-size: 21px;
  line-height: 21px;
  padding: 15px 38px;
}

.content-panel-cards-main {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
}

.content-panel-cards-main-first {
  grid-column: span 2;
  grid-row: span 2;
}

.content-panel-cards-main-last {
  grid-column: span 2;
}

.content-panel-cards {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 15px;
}

.content-img {
  width: 100%;
  height: 100%;
  border-radius: 10px;
  filter: grayscale(60%);
  transition: 500ms filter linear, 500ms -webkit-filter linear;
  cursor: pointer;
  position: relative;
}

.content-img:hover {
  border-radius: 10px;
  filter: none;
}

.footer {
  margin-top: 80px;
  background-color: #1e242c;
  width: 100%;
}

.footer-content {
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.footer-content > p {
  font-weight: 300;
  font-size: 14px;
  line-height: 14px;
  color: #8E8E8E;
}

.footer-content-feedback{
  display: flex;
  flex-direction: row;
  column-gap: 30px;
}

.footer-content-feedback-ask{
  font-weight: 400;
  font-size: 18px;
  line-height: 14px;
  cursor: pointer;
}


.score{
  font-family: "Bebas";
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 29px;
}

.circle{
  position: relative;
}

.pie{
  position: absolute;
  left: -16px;
  top: -15px;
}


.score-orange{
  color: #FFC30D;
}

